# virtual-creatures

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  notes.md
src/: main.rs
src/brain/: mod.rs
src/evolution/: mod.rs
src/genotype/: graph.rs  io.rs  mod.rs  morphology.rs  neural.rs
src/phenotype/: builder.rs  mod.rs
